--- a/SesimicActivityMap/ivy.xml
+++ b/SesimicActivityMap/ivy.xml
@@ -40,5 +40,7 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
+			
+		<dependency org="com.vaadin.tapio" name="googlemaps" rev="0.5" />
 	</dependencies>
 </ivy-module>
